test/link/script-num-fmt.out
error: Cannot decrease the current address (from $002a to $0029)
    at script-num-fmt.link(9)
Linking failed with 1 error
